--- a/style.css
+++ b/style.css
@@ -1,26 +1,142 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Freeman&family=Itim&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .container {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
+    height: 93vh;
+    /* background-image: url('https://images.pexels.com/photos/28148096/pexels-photo-28148096/free-photo-of-a-palm-tree-is-shown-against-a-blue-sky.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center; */
+
 }
 
 .nav-bar {
     grid-column: 1/11;
-    height: 10vh;
-    margin-bottom: 10px;
-    background-color: rgb(203, 203, 203);
+    /* background-color: #C70C82; */
+    height: fit-content;
+
+    /* h4 {
+        color: white;
+        position: absolute;
+        transform: translate(20px, 20px);
+        font-size: 2rem;
+        font-family: "Freeman", serif;
+        font-weight: 800;
+        font-style: normal;
+    } */
 }
 
-.body{
+li:nth-child(4) {
+    float: left;
+}
+
+.text {
+    grid-column: 5/11;
+    display: grid;
+    place-items: center;
+}
+
+.text2 {
     grid-column: 1/11;
-    height: 95vh;
-    background-color: aquamarine;
+    display: grid;
+    place-items: center;
+    background-color: black;
+    height: 90vh;
+    padding-inline: 5rem;
 }
 
-nav ul li{
-    list-style: none;
+.image--section {
+    width: auto;
+    overflow: hidden;
+}
+
+.image--section img {
+    width: 60%;
+    height: 100vh;
+}
+
+.content--in {
+    display: flex;
+    flex-direction: row;
+}
+
+.text--section {
+    display: grid;
+    place-items: center;
+}
+
+.text2 div {
+    background-color: rgb(10, 199, 136);
+    height: 50vh;
+    width: 100%;
+}
+
+.image-- {
+    grid-column: 1/5;
+    /* background-color: rgb(6, 6, 6); */
+    /* height: 95vh;
+
+    background-image: url('https://images.pexels.com/photos/28148096/pexels-photo-28148096/free-photo-of-a-palm-tree-is-shown-against-a-blue-sky.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center; */
+
+    img {
+        width: 90%;
+        height: 80%;
+        border-radius: 50%;
+        margin: 10% 0% 0% 10%;
+    }
+}
+
+
+
+nav ul li {
+    justify-content: center;
     display: inline-block;
     margin-inline: 20px;
-    line-height: 40px;
-    float: right;
+    font-size: 2rem;
+    list-style: none;
 }
 
+nav ul li a {
+    text-decoration: none;
+}
+
+nav ul li {
+    margin-block: 1rem !important;
+}
+
+.nav{
+    background-color: rgb(195, 195, 195);
+}
+
+
+.image--in {
+    grid-column: 1/6;
+    overflow: hidden;
+    display: grid;
+    place-items: center;
+
+    img{
+        width: 80%;
+        height: 80%;
+        border-radius: 50%;
+    }
+}
+
+.text--in {
+    grid-column: 6/11;
+    /* display: grid;
+    place-items: center; */
+}
+
+.footer{
+    grid-column: 9/11;
+}
