--- a/style.css
+++ b/style.css
@@ -5,50 +5,38 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Freeman&family=Itim&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* Grids */
 .container {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     height: 93vh;
-    /* background-image: url('https://images.pexels.com/photos/28148096/pexels-photo-28148096/free-photo-of-a-palm-tree-is-shown-against-a-blue-sky.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center; */
-
 }
 
 .nav-bar {
     grid-column: 1/11;
-    /* background-color: #C70C82; */
     height: fit-content;
-
-    /* h4 {
-        color: white;
-        position: absolute;
-        transform: translate(20px, 20px);
-        font-size: 2rem;
-        font-family: "Freeman", serif;
-        font-weight: 800;
-        font-style: normal;
-    } */
+    border-bottom: 5px solid black;
 }
 
+.image {
+    grid-column: 1/7;
+}
+
+.text {
+    grid-column: 7/11;
+    display: grid;
+    place-items: center;
+    height: 90vh;
+    padding-inline: 5rem;
+}
+
+/* styles */
 li:nth-child(4) {
     float: left;
 }
 
-.text {
-    grid-column: 5/11;
-    display: grid;
-    place-items: center;
-}
-
-.text2 {
-    grid-column: 1/11;
-    display: grid;
-    place-items: center;
-    background-color: black;
-    height: 90vh;
-    padding-inline: 5rem;
+ul li {
+    list-style: none;
 }
 
 .image--section {
@@ -60,42 +48,6 @@ li:nth-child(4) {
     width: 60%;
     height: 100vh;
 }
-
-.content--in {
-    display: flex;
-    flex-direction: row;
-}
-
-.text--section {
-    display: grid;
-    place-items: center;
-}
-
-.text2 div {
-    background-color: rgb(10, 199, 136);
-    height: 50vh;
-    width: 100%;
-}
-
-.image-- {
-    grid-column: 1/5;
-    /* background-color: rgb(6, 6, 6); */
-    /* height: 95vh;
-
-    background-image: url('https://images.pexels.com/photos/28148096/pexels-photo-28148096/free-photo-of-a-palm-tree-is-shown-against-a-blue-sky.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center; */
-
-    img {
-        width: 90%;
-        height: 80%;
-        border-radius: 50%;
-        margin: 10% 0% 0% 10%;
-    }
-}
-
-
 
 nav ul li {
     justify-content: center;
@@ -113,10 +65,9 @@ nav ul li {
     margin-block: 1rem !important;
 }
 
-.nav{
+.nav {
     background-color: rgb(195, 195, 195);
 }
-
 
 .image--in {
     grid-column: 1/6;
@@ -124,7 +75,7 @@ nav ul li {
     display: grid;
     place-items: center;
 
-    img{
+    img {
         width: 80%;
         height: 80%;
         border-radius: 50%;
@@ -137,6 +88,24 @@ nav ul li {
     place-items: center; */
 }
 
-.footer{
+.nav-bar img {
+    width: 90%;
+    height: 80%;
+    border-radius: 50%;
+    margin: 10% 0% 0% 10%;
+}
+.footer {
     grid-column: 9/11;
+}
+
+@media screen and (max-width: 768px) {
+    .image {
+        grid-column: 1/11;
+    }
+
+    nav ul li {
+        display: none;
+    }
+
+
 }
